--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulário de Cadastro</title>
-    <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/toggle_fields.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/buscar_cep.js') }}" defer></script>
 </head>
 
 <body>
     <h1>Formulário de Cadastro</h1>
     <form action="/submit" method="post">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required><br><br>
-
         <label for="tipo">Tipo:</label>
         <select id="tipo" name="tipo" onchange="toggleFields()" required>
             <option value="">Selecione</option>
@@ -21,13 +19,30 @@
         </select><br><br>
 
         <div id="fisica" style="display:none">
-            <label for="cpf">CPF</label>
+            <label for="cpf">CPF:</label>
             <input type="text" id="cpf" name="cpf" name="cpf"><br><br>
         </div>
         <div id="juridica" style="display: none;">
-            <label for="cnpj">CNPJ</label>
+            <label for="cnpj">CNPJ:</label>
             <input type="text" id="cnpj" name="cnpj" name="cnpj"><br><br>
         </div>
+
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required><br><br>
+
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" name="cep" maxlength="8">
+        <button type="button" onclick="buscarCep()">Buscar</button><br><br>
+
+        <label for="rua">Rua:</label>
+        <input type="text" id="rua" name="rua" readonly><br><br>
+
+        <label for="numero">Número: </label>
+        <input type="text" id="numero" name="numero" required><br><br>
+
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro" name="bairro" readonly><br><br>
+
         <button type="submit">Cadastrar</button>
     </form>
 </body>
